--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
